# teste-tecnico-jobconvo

./: .coveragerc  .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  roteiro.txt
project-jobconvo/: db.jobs.sqlite3  manage.py  pytest.ini
project-jobconvo/app_candidate/: apps.py  forms.py  models.py  service_jobs.py  urls.py  views.py
project-jobconvo/app_candidate/migrations/: 0001_initial.py  0002_experience_user_remove_experience_name_and_more.py
project-jobconvo/app_candidate/templates/: create_candidate.html  delete_candidate.html  experience_create.html  home_candidate.html  list_candidates.html  list_experience.html  login_candidate.html  teste.html  update_candidate.html  update_experience.html
project-jobconvo/app_candidate/tests_candidate/: tests_candidates_forms.py  tests_candidates_models.py  tests_candidates_urls.py
project-jobconvo/app_company/: admin.py  forms.py  models.py  service.py  service_candidate.py  urls.py  views.py
project-jobconvo/app_company/migrations/: 0001_initial.py  0002_company_cnpj_jobs_minimum_schooling_and_more.py  0002_jobs_candidate_alter_jobs_salary_range.py  0003_jobs_minimum_schooling_candidate_and_more.py  0004_remove_jobs_candidate_and_more.py  0005_application.py  0006_alter_application_candidate_and_more.py  0007_alter_application_job.py  0008_alter_application_candidate.py  0009_companyowner.py
project-jobconvo/project_jobconvo/: asgi.py  settings.py  urls.py  wsgi.py
project-jobconvo/templates/: base_candidates.html  home.html
project-jobconvo/tests/: test_project.py
(+26 files in other folders)
